--- a/style/style.css
+++ b/style/style.css
@@ -12,8 +12,38 @@ nav .brand-logo.left{
     padding-left: 0.8rem;
 }
 
+#logout-container {
+    position: relative;
+    top: 0px;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    padding: 0 !important;
+    margin: 0 !important;
+
+    display: none;
+    opacity: 1;
+    background-color: transparent;
+}
+
+#logout {
+    width: 100%;
+    height: 100%;
+
+    color: white;
+
+    display: flex;
+    justify-content: center; /* align horizontal */
+    align-items: center; /* align vertical */
+}
+
+#logout h3 {
+    margin: 0;
+    display: none;
+}
+
 #logo-monochrome {
-   height: 45px;
+    height: 45px;
     position: relative;
     top: 9px;
     padding-right: 10px;
